# crossterm

./: CHANGELOG.md  Cargo.toml  README.md  nornagon-color-query.patch
examples/: event-poll-read.rs  event-read.rs  event-stream-async-std.rs  event-stream-tokio.rs  is_tty.rs  key-display.rs
examples/interactive-demo/: Cargo.toml
examples/interactive-demo/src/: main.rs
examples/interactive-demo/src/test/: cursor.rs  event.rs  synchronized_output.rs
src/: clipboard.rs  cursor.rs  event.rs  lib.rs  style.rs
src/cursor/sys/: unix.rs  windows.rs
src/event/: filter.rs  internal.rs  read.rs  stream.rs
src/event/source/: windows.rs
src/event/source/unix/: mio.rs  tty.rs
src/event/sys/unix/: parse.rs
src/event/sys/windows/: parse.rs
src/style/: query.rs  stylize.rs
src/style/sys/: windows.rs
src/style/types/: color.rs  colored.rs
src/terminal/sys/: unix.rs  windows.rs
